--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -15,6 +15,8 @@
   </header>
   <section class="robotsAreCool">
     {{#users}}
+
+    {{#robot}}{{username}}{{/robot}}
     <section class="robots">
     <a href="/{{username}}"><h2>{{name}}</h2>
 
